# SIRA_PP

./: README.md
data/: historial.csv  intereses.csv
modulo_cpp/: .gitignore  CMakeLists.txt  README.md
modulo_cpp/include/: Banner.h  CursoClass.h  HistorialClass.h  InteresClass.h  Opciones.h  PrerrequisitoClass.h  Util.h
modulo_cpp/src/: Banner.cpp  CursoClass.cpp  HistorialClass.cpp  InteresClass.cpp  Opciones.cpp  PrerrequisitoClass.cpp  Util.cpp  main.cpp
modulo_haskell/: Main.hs  README.md
modulo_pl/: README.md  recomendacion.pl
